--- a/classNotes/6-vectors/6-vectors.Rmd
+++ b/classNotes/6-vectors/6-vectors.Rmd
@@ -1,3 +1,16 @@
+---
+title: "Week 6: Vectors"
+subtitle: "EMSE 6574, Section 11 "
+author: "John Helveston"
+date: September 30, 2019
+output:
+  xaringan::moon_reader:
+    css: classNotes.css
+---
+
+# We've been dealing with vectors all along!
+
+```{r}
 x <- 1
 x
 ```
@@ -54,18 +67,42 @@ rep("snarf", 5)
 # Elements in vectors must be the same type
 
 --
-If a vector has a single character element, R makes everything a character:
-
+If a vector has a single character element, R makes everything a **character**:
 ```{r}
 c(1, 2, "3")
 c(TRUE, FALSE, "TRUE")
 ```
 
 --
-If a vector has numeric and logical elements, R makes everything a number:
-
+If a vector has numeric and logical elements, R makes everything a **number**:
 ```{r}
 c(1, 2, TRUE, FALSE)
+```
+
+--
+If a vector has integers and floats, R makes everything a **float**:
+```{r}
+c(1L, 2, pi)
+```
+
+---
+# Practice: What will this return?
+
+[60 seconds](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
+
+
+```{r, eval=FALSE}
+f <- function(x) {
+    m = x
+    l = x + 4
+    m = m + 5
+    return(c(m, l))
+}
+
+x <- c(1, 2, 3)
+y <- c(3, 4, 5)
+f(x)
+f(y)
 ```
 
 ---
@@ -76,16 +113,22 @@ x <- 1:10
 x
 ```
 
--- 
-Sum all the elements
+--
+Sum all the elements:
+
+Using a loop:
 ```{r}
 # Using a loop:
-total <- c()
-for (element in x) {
+total <- 0
+for (i in x) {
     total <- total + x[i]
 }
 total
+```
 
+--
+Using a vector:
+```{r}
 # Using a vector operation:
 sum(x)
 ```
@@ -198,6 +241,24 @@ Another way - use the `which()` function:
 ```{r}
 which(x < 5) # Returns indices of TRUE elements
 x[which(x < 5)] # Use which to select elements based on a condition
+```
+
+---
+# Practice: What will this return?
+
+[60 seconds](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
+
+```{r, eval=FALSE}
+f <- function(x) {
+    for (i in seq(length(x))) {
+        x[i] <- x[i] + sum(x) + max(x)
+    }
+    return(x)
+}
+x <- c(2, 1, 0)
+y <- c(1, 4, 7)
+f(x)
+f(y)
 ```
 
 ---
@@ -326,46 +387,62 @@ Using a vector:
 x %% 1
 ```
 
+---
+# Group practice 
 
+[20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
 
+.pull-left[
+1) `reverseVector(x)`
 
+Write a function that returns the vector in reverse order. So if `x` equals `c(2,3,4)`, then `reverseVector(x)` should equal `c(4,3,2)`. You cannot use the `rev()` function (which does exactly this). **No loops!** Here's some test cases:
 
+- `reverseVector(c(5, 1, 3)) == c(3, 1, 5)`
+- `reverseVector(c(FALSE, TRUE, TRUE)) == c(TRUE, TRUE, FALSE)`
+- `reverseVector(seq(10)) == seq(10, 1, -1)`
 
+]
 
+.pull-right[
+2) `dotProduct(a, b)`
 
+**Background**: the "dot product" of two vectors is the sum of the products of the corresponding terms. So the dot product of the vectors `c(1,2,3)` and `c(4,5,6)` is `(1*4) + (2*5) + (3*6)`, or `4 + 10 + 18 = 32`.  
 
+With this in mind, write a function that takes two vectors and returns the dot product of those vectors. If the vectors are not equal length, ignore the extra elements in the longer vector. **No loops!** Here's some test cases:
 
+- `dotProduct(c(1,2,3), c(4,5,6)) == 32`
+- `dotProduct(c(1,2), c(4,5,6)) == 14`
+- `dotProduct(c(2,3,4), c(-7,1,9)) == 25`
+- `dotProduct(c(0,0,0), c(-7,1,9)) == 0`
 
+]
 
+---
+# Group practice 
 
+[20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
 
-### 1)
-Write the output of this code by hand:
+.pull-left[
+1) `alternatingSum(a)`
 
-```{r, eval=FALSE}
-f <- function(x) {
-    m = x
-    l = x + 4
-    m = m + 5
-    return(c(m, l))
-}
+Write a function that takes a vector of numbers `a` and returns the alternating sum, where the sign alternates from positive to negative or vice versa. **No loops!** Here's some test cases:
 
-x = c(1, 2, 3)
-f(x)
-```
+- `alternatingSum(c(5,3,8,4)) == (5 - 3 + 8 - 4)`
+- `alternatingSum(c(1,2,3)) == (1 - 2 + 3)`
+- `alternatingSum(c(0,0,0)) == 0`
+- `alternatingSum(c(-7,5,3)) == (-7 - 5 + 3)`
 
-### 2)
-Write the output of this function by hand:
+]
 
-```{r, eval=FALSE}
-f <- function(x) {
-    for (i in seq(length(x))) {
-        x[i] <- x[i] + sum(x) + max(x)
-    }
-    return(sort(x))
-}
-x = c(2, 1, 0)
-f(x)
-```
+.pull-right[
+2) `median(a)`
 
+Write a function that takes a vector of numbers `a` and returns the median value in the vector, which is the value of the middle element (or the average of the two middle elements). **No loops!** Here's some test cases:
 
+- `median(c(5,3,8,4)) == mean(c(3,8))`
+- `median(c(0,0,0)) == 0`
+- `median(c(1,2,3)) == 2`
+- `median(c(4,5,6,7,8)) == 6`
+- `median(c(4,5,6,7)) == mean(c(5,6))`
+
+]
