--- a/classNotes/6-vectors/slides-6-vectors.Rmd
+++ b/classNotes/6-vectors/slides-6-vectors.Rmd
@@ -8,7 +8,7 @@ output:
     css: classNotes.css
 ---
 
-# Announcements 
+# Announcements
 
 ---
 # We've been dealing with vectors all along!
@@ -133,12 +133,17 @@ x - x
 ---
 # Summing numeric vectors
 
+```{r}
+x <- 1:10
+x
+```
+
 --
 Using a loop:
 ```{r}
 total <- 0
-for (i in x) {
-    total <- total + x[i]
+for (item in x) {
+    total <- total + item
 }
 total
 ```
@@ -157,12 +162,24 @@ sum(x)
 x <- 1:10
 x
 ```
-
+--
 ```{r}
-prod(x) 
+prod(x)
+```
+--
+```{r}
 mean(x)
+```
+--
+```{r}
 median(x)
+```
+--
+```{r}
 max(x)
+```
+--
+```{r}
 min(x)
 ```
 
@@ -170,7 +187,6 @@ min(x)
 # Practice: What will this return?
 
 [60 seconds](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
-
 
 ```{r}
 f <- function(x) {
@@ -215,6 +231,10 @@ x[1:3]  # Returns the first three elements
 ```{r}
 x[c(2, 7)] # Returns the 2nd and 7th elements
 ```
+--
+```{r}
+x[length(x)] # Returns the last element
+```
 
 ---
 # Use negative integers to _remove_ elements
@@ -231,76 +251,97 @@ x[-1] # Returns everything except the first element
 ```{r}
 x[-c(2, 7)] # Returns everything except the 2nd and 7th elements
 ```
+--
+```{r}
+x[-length(x)] # Returns everything except the last elements
+```
 
 ---
-# Characters indices
+# You can give names to vector elements
 
-You can name vector elements by
-
---
-1. Using the `names()` function:
 ```{r}
-x <- seq(1, 10)
-names(x) <- c('one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight', 'nine', 'ten')
+x <- seq(5)
 x
 ```
 
 --
-2. Using the `c()` function:
+1) Use the `names()` function:
 ```{r}
-y <- c('one' = 1, 'two' = 2, 'three' = 3)
-y
+names(x) <- c('one', 'two', 'three', 'four', 'five')
+x
 ```
 
 --
-You can use names to slice vectors:
+2) Use the `c()` function:
 ```{r}
-x['one'] 
-y[c('two', 'three')] 
+y <- c('one' = 1, 'two' = 2, 'three' = 3, 'four' = 4, 'five' = 5)
+y
 ```
+
+---
+# You can use names to slice vectors
+
+```{r}
+x
+```
+--
+```{r}
+x['one']
+```
+--
+```{r}
+x[c('two', 'three')]
+```
+
 
 ---
 # Logical indices
 
 --
 ```{r}
-x <- seq(10)
+x <- seq(10, 1)
 x
 ```
 
 --
+Create a logical vector:
 ```{r}
-x > 5 # Create logical vector
+x > 5
 ```
 
 --
+Use logical vector in brackets to filter elements:
 ```{r}
-x[x > 5] # Put logical vector in brackets to filter out the TRUE elements
+x[x > 5]
 ```
 
 --
 Another way - use the `which()` function:
 ```{r}
-which(x < 5) # Returns indices of TRUE elements
-x[which(x < 5)] # Use which to select elements based on a condition
+which(x > 5) # Returns indices of TRUE elements
+x[which(x > 5)] # Use which to select elements based on a condition
 ```
 
 ---
 # Practice: What will this return?
 
-[60 seconds](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
+[2 minutes](https://www.youtube.com/watch?v=4xG2aJa6UyY) - no typing!
 
-```{r, eval=FALSE}
+```{r}
 f <- function(x) {
     for (i in seq(length(x))) {
         x[i] <- x[i] + sum(x) + max(x)
     }
     return(x)
 }
-x <- c(2, 1, 0)
-y <- c(1, 4, 7)
+x <- c(1, 2, 3)
+```
+```{r, eval=FALSE}
 f(x)
-f(y)
+```
+--
+```{r}
+f(x)
 ```
 
 ---
@@ -405,7 +446,7 @@ order(a)
 --
 This does the same thing as `sort(a)`:
 ```{r}
-a[order(a)] 
+a[order(a)]
 ```
 
 ---
@@ -430,7 +471,7 @@ x %% 1
 ```
 
 ---
-# Group practice 
+# Group practice
 
 [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
 
@@ -448,7 +489,7 @@ Write a function that returns the vector in reverse order. So if `x` equals `c(2
 .pull-right[
 2) `dotProduct(a, b)`
 
-**Background**: the "dot product" of two vectors is the sum of the products of the corresponding terms. So the dot product of the vectors `c(1,2,3)` and `c(4,5,6)` is `(1*4) + (2*5) + (3*6)`, or `4 + 10 + 18 = 32`.  
+**Background**: the "dot product" of two vectors is the sum of the products of the corresponding terms. So the dot product of the vectors `c(1,2,3)` and `c(4,5,6)` is `(1*4) + (2*5) + (3*6)`, or `4 + 10 + 18 = 32`.
 
 With this in mind, write a function that takes two vectors and returns the dot product of those vectors. If the vectors are not equal length, ignore the extra elements in the longer vector. **No loops!** Here's some test cases:
 
@@ -460,7 +501,7 @@ With this in mind, write a function that takes two vectors and returns the dot p
 ]
 
 ---
-# Group practice 
+# Group practice
 
 [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
 
